# healthcare

./: CONTRIBUTING.md  README.md  WORKSPACE
datathon/: README.md  setup.py
datathon/anzics18/: README.md  tutorial.Rmd  tutorial.ipynb  tutorial.matlab
datathon/cms_medicare/: FAQ.md  README.md  bigquery_ui.md
datathon/datathon_etl_pipelines/: README.md  utils.py  utils_test.py
datathon/deploy/: datathon_projects.yaml  domain_management.md
datathon/imaging/: README.md
datathon/mimic_cxr/: mimic_cxr_train.ipynb
datathon/mimic_eicu/: FAQ.md  README.md
datathon/new_imaging/: README.md  build_cloudml_model.ipynb  cloudml_to_bq_test.py  dataflow_requirements.txt  load_feature_vectors.py  png_to_tfrecord.py  prepare_dicom.py
datathon/nusdatathon18/: FAQ.md  README.md
datathon/organizer/: README.md  datathon_projects.tmpl.yaml  datathon_projects.yaml  domain_management.md  generated_fields.yaml  input.yaml
datathon/utils/: download_bq_queries.sh
deploy/: BUILD  README.md  WORKSPACE  create_project.py  create_project.sh  create_project_test.py  generate_rules.py  generated_fields.yaml.schema  grant_forseti_access.py  presubmit.yaml  project_config.yaml.schema  requirements.txt  utils.py
deploy/apply/: BUILD  apply.go  apply_test.go  chc_resource.go  chc_resource_test.go  forseti.go  forseti_test.go  gke.go  gke_test.go  migrations.go  migrations_test.go  options.go  terraform.go  terraform_test.go
deploy/audit_backend/: .gcloudignore  app.yaml  main.py  requirements.txt
deploy/cft/: BUILD  README.md  bigquery_dataset.go  bigquery_dataset_test.go  binding.go  cft.go  cft_test.go  default_resource.go  default_resource_test.go  deployment.go  deployment_test.go  gce_instance.go  gce_instance_test.go  gcs_bucket.go  gcs_bucket_test.go  generated_fields.go  generated_fields_test.go  gke_cluster.go  gke_cluster_test.go  gke_workload.go  gke_workload_test.go  iam.go  iam_test.go  logsink.go  logsink_test.go  metric.go  metric_test.go  pubsub.go  pubsub_test.go  resourcepair.go  resourcepair_test.go
deploy/cmd/: BUILD
deploy/collector/: BUILD  README.md  app.yaml  collector.go  cron.yaml
deploy/config/: BUILD  bigquery_dataset.go  bigquery_dataset_test.go  binary_authorization.go  binding.go  chc_dataset.go  chc_dataset_test.go  config.go  config_test.go  default_resource.go  default_resource_test.go  forseti.go  forseti_test.go  gce_instance.go  gce_instance_test.go  gcs_bucket.go  gcs_bucket_test.go  generated_fields.go  generated_fields_test.go  gke_cluster.go  gke_cluster_test.go  gke_workload.go  iam.go  iam_test.go  load.go  load_test.go  logsink.go  logsink_test.go  metric.go  metric_test.go  pair.go  pubsub.go  pubsub_test.go  read_config.go  read_config_test.go  resourcepair.go  resourcepair_test.go  service_account.go  service_account_test.go  terraform.go  (+1 more)
deploy/container/: Dockerfile  cloudbuild.yaml
deploy/deploymentmanager/: BUILD  deploymentmanager.go  deploymentmanager_test.go
deploy/engine/: BUILD  README.md  main.go
deploy/importer/: BUILD  README.md  main.go
deploy/integration_test/: integration_test.yaml  project1.yaml
deploy/policygen/: BUILD  README.md  config.go  main.go
deploy/rule_generator/: BUILD  project_config.py  project_config_test.py  rule_generator.py
deploy/rulegen/: BUILD  audit_logging.go  audit_logging_test.go  bigquery.go  bigquery_test.go  bucket.go  bucket_test.go  cloud_sql.go  cloud_sql_test.go  enabled_apis.go  enabled_apis_test.go  iam.go  iam_test.go  lien.go  lien_test.go  location.go  location_test.go  log_sink.go  log_sink_test.go  resource.go  resource_test.go  resourceutil.go  rulegen.go  rulegen_test.go
deploy/runner/: BUILD  runner.go
deploy/samples/: BUILD  README.md  audit_logs_project_config.yaml  data_hosting_project_config.yaml  datathon_team_project.yaml  generated_fields.yaml  minimal.yaml  project_with_local_audit_logs.yaml  project_with_local_audit_logs_dataproc.yaml  project_with_local_audit_logs_dataproc_scripts.yaml  project_with_remote_audit_logs.yaml  sandbox_project_demo.yaml  terraform.yaml
deploy/starlark/: BUILD  config_test.bzl
deploy/template/: BUILD  funcmap.go  template.go  template_test.go
deploy/templates/: BUILD  audit_log_config.py  create_dataproc.py  create_fwrules.py  data_project.py  data_project.py.schema  data_project_test.py  gce_vms.py  gce_vms.py.schema  gce_vms_test.py  metric.py  remote_audit_logs.py  remote_audit_logs.py.schema  remote_audit_logs_test.py
deploy/terraform/: BUILD  apply.go  apply_test.go  config.go  config_test.go
deploy/testconf/: BUILD  testconf.go
deploy/tests/: test_create_project.py
deploy/utils/: BUILD  field_generation.py  field_generation_test.py  forseti.py  forseti_test.py  runner.py  utils.py  (+1 more)
ehr/hl7/mllp_adapter/: BUILD.bazel  README.md  WORKSPACE  mllp_adapter.go
ehr/hl7/mllp_adapter/healthapiclient/: BUILD.bazel  healthapiclient.go  healthapiclient_test.go
ehr/hl7/mllp_adapter/mllp/: BUILD.bazel  mllp.go  mllp_test.go
ehr/hl7/mllp_adapter/mllpreceiver/: BUILD.bazel  mllpreceiver.go  mllpreceiver_test.go
ehr/hl7/mllp_adapter/mllpsender/: BUILD.bazel  mllpsender.go  mllpsender_test.go
ehr/hl7/mllp_adapter/monitoring/: BUILD.bazel  monitoring.go  monitoring_test.go
ehr/hl7/mllp_adapter/pubsub/: BUILD.bazel  pubsub.go  pubsub_test.go
ehr/hl7/mllp_adapter/testingutil/: BUILD.bazel  testingutil.go
ehr/hl7/mllp_adapter/util/: BUILD.bazel  util.go  util_test.go
ml_solutions/: README.md  generate_synthea_dataset.ipynb  synthea_bqml_automl.ipynb
operations/: cancel_all_ops.py
utilities/: README.md
(+756 files in other folders)
