# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "mllp_adapter",
    srcs = ["mllp_adapter.go"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "//healthapiclient:go_default_library",
        "//mllpreceiver:go_default_library",
        "//mllpsender:go_default_library",
        "//monitoring:go_default_library",
        "//pubsub:go_default_library",
    ],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "mllp_adapter_docker",
    base = "@ubuntu//image:image",
    directory = "/usr/mllp_adapter",
    files = [":mllp_adapter"],
)

docker_push(
    name = "image_push",
    image = ":mllp_adapter_docker",
    registry = "gcr.io",
    # Placeholder project and image names, please replace with yours.
    repository = "my-project/my-image",
    tag = "latest",
)
